# compact_nozzlenet

./: CMakeLists.txt  LICENSE  README.md  package.xml  requirements.txt
config/: .nozzle_config.yaml.swp  nozzle_config.yaml  nozzle_config.yaml.save
launch/: nozzle_net.launch
model/: resnet50.onnx  resnet50_v1.onnx  resnet50_v2.onnx  resnet50_v3.onnx
msg/: NozzleStatus.msg
src/: nozzle_net_node.py
train_script/: train_resnet50_v6.py
